name:                cryptoconv
version:             0.1.0.0
synopsis:            Simple cryptocurrency converter
-- description:
license:             BSD3
license-file:        LICENSE
author:              Anton Dort-Golts
maintainer:          dortgolts@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable cryptoconv
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , wreq >= 0.5
                     , lens >= 4.15
                     , aeson >= 1.2
                     , async >= 2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
